--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ repository = "https://github.com/simnalamburt/personal-op-bot"
 [dependencies]
 anyhow = "1"
 rust-argon2 = "1.0"
-clap = { version = "3.0.14", features = ["derive"] }
+clap = { version = "4.3.1", features = ["derive"] }
 
 futures = "0.3"
 tokio = { version = "1", features = ["full"] }
@@ -21,5 +21,6 @@ tracing-subscriber = "0.3"
 [dependencies.irc]
 # FIXME: Use original crate when https://github.com/aatxe/irc/pull/236 merged
 git = "https://github.com/simnalamburt/irc"
+rev = "66f18c2"
 default-features = false
 features = ["ctcp", "tls-rust", "toml_config"]
