--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,7 @@
-on: [push, pull_request]
+on:
+  push:
+    tags:
+      - v*
 
 jobs:
   test:
@@ -8,3 +11,4 @@ jobs:
       - uses: docker/setup-buildx-action@v1
       - uses: actions/checkout@v2
       - run: docker buildx build --platform linux/amd64,linux/arm64/v8 .
+        # TODO: automatically release
