--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,4 @@ futures = "0.3"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
-
-[dependencies.irc]
-# FIXME: Use original crate when https://github.com/aatxe/irc/pull/236 merged
-git = "https://github.com/simnalamburt/irc"
-rev = "66f18c2"
-default-features = false
-features = ["ctcp", "tls-rust", "toml_config"]
+irc = "1"
